@@ -1,3 +1,14 @@
+2004-01-28  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_class_init), (gst_v4lsrc_init),
+	(gst_v4lsrc_open), (gst_v4lsrc_close),
+	(gst_v4lsrc_palette_to_caps), (gst_v4lsrc_srcconnect),
+	(gst_v4lsrc_getcaps), (gst_v4lsrc_set_clock):
+	* sys/v4l/gstv4lsrc.h:
+	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_capture_start),
+	(gst_v4lsrc_grab_frame), (gst_v4lsrc_capture_stop):
+	  Implement resizing... Hack. But that's why v4l is b0rked...
+
 2004-01-28  Julien MOUTTE <julien@moutte.net>
 
 	* sys/ximage/ximagesink.c: (gst_ximagesink_check_xshm_calls),
